--- a/src/components/userDasboardComponents/home/Log.module.scss
+++ b/src/components/userDasboardComponents/home/Log.module.scss
@@ -42,3 +42,13 @@
   display: flex;
   align-items: center;
 }
+
+@media (max-width: 1255px) {
+  .taskWrapper {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .dash {
+    display: none;
+  }
+}
