--- a/src/components/ProfileScreen/ProfileScreen.module.scss
+++ b/src/components/ProfileScreen/ProfileScreen.module.scss
@@ -7,7 +7,9 @@ body {
 }
 
 .container {
-    width: calc(100% - 250px);
+    background: #F6FAFB;
+    width: 100%;
+    height: 100vh;
     padding-top: 30px;
     padding-left: 290px;
 }
