--- a/src/components/VA-Profile/VaProfile.module.scss
+++ b/src/components/VA-Profile/VaProfile.module.scss
@@ -1,19 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap');
 
-.major_container {
-  width: 74.375rem;
-  height: 49rem; 
-  position: relative;
+
+.profile_container {
+  display: flex;
+  flex-direction: row;
+  margin: auto;
+  gap: 3rem;
 }
 
-.rating_container_div {
-  margin-bottom: 18.75rem; 
-  position: absolute;
-  top: 9.375rem; 
-  left: 56.25rem; 
+.rating_container_div{
+  margin-left: 14rem;
 }
 
-       
 .header {
   display: flex;
   justify-content: flex-end;
@@ -23,39 +21,11 @@
   border-bottom: 0.063rem solid #E9F3F5;
 }
 
-.header_profile_container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.header_profile_image {
-  margin-right: 0.625rem; 
-}
-
-.header_profile_name {
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 0.875rem;
-  line-height: 1.063rem;
-  color: #333333;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.IoIosArrowDown {
-  color: #333333;
-  width: 2.5rem; 
-  height: 1.875rem;  
-}
-
 
 .AiOutlineArrowLeft {
   color: #576B75;
-  width: 1rem;
-  height: 1rem;
+  width: 1.3rem;
+  height: 1.3rem;
 }
 
 .back_button_container {
@@ -70,8 +40,7 @@
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
-  font-size: 0.75rem;  
-  line-height: 1.188rem; 
+  font-size: 1rem;  
   width: 1.688rem; 
   height: 1.188rem; 
   margin-left: 0.313rem; 
@@ -90,12 +59,11 @@
   display: flex;
   text-align: center;
   align-items: center;
-  width: 5.063rem; 
-  height: 1.188rem; 
   font-family: "Open Sans";
   font-family: normal;
   font-weight: 400;
-  line-height: 1.188rem;
+  font-size: 1rem;
+  margin-right: 2rem;
   background: #F6FAFB;
 }
 
@@ -121,6 +89,7 @@
 
 .profile_container_items {
   gap: 1.25rem;
+  margin-left: -1.5rem;
 }
 
 .profile_container_items_header {
@@ -141,9 +110,7 @@
   color: #333333;
 }
 
-.profile_container_items_paragraph {
-  width: 5.063rem; 
-  height: 1.188rem; 
+.profile_container_items_paragraph1 {
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
@@ -153,9 +120,68 @@
   margin-bottom: 0.625rem; 
 }
 
+.profile_container_items_paragraph2 {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 0.75rem; 
+  line-height: 1.188rem;
+  color: #707070;
+  margin-bottom: 0.625rem; 
+}
+
+.profile_container_items_paragraph3 {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 0.75rem; 
+  line-height: 1.188rem;
+  color: #707070;
+  margin-bottom: 0.625rem; 
+}
+
+.profile_container_items_paragraph4 {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 0.75rem; 
+  line-height: 1.188rem;
+  color: #707070;
+  margin-bottom: 0.625rem; 
+}
+
+.profile_container_items_paragraph5 {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 0.75rem; 
+  line-height: 1.188rem;
+  color: #707070;
+  margin-bottom: 0.625rem; 
+}
+
+.profile_container_items_paragraph6 {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 0.75rem; 
+  line-height: 1.188rem;
+  color: #707070;
+  margin-bottom: 0.625rem; 
+}
+
+.profile_container_items_paragraph7 {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 0.75rem; 
+  line-height: 1.188rem;
+  color: #707070;
+  margin-bottom: 0.625rem; 
+}
+
+
 .profile_container_num {
-  width: 7.125rem; 
-  height: 1.25rem; 
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 700;
@@ -176,21 +202,17 @@
 }
 
 .profile_container_items_city {
-  width: 5.063rem;
-  height: 1.188rem;
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
   font-size: 0.75rem; 
   line-height: 1.188rem;
   color: #707070;
-  margin-right: 1.25rem;
+  margin-right: 5rem;
   margin-bottom: 0.625rem;
 }
 
 .profile_container_bio {
-  width: 25.188rem; 
-  height: 2.375rem; 
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
@@ -206,7 +228,8 @@
   font-size: 0.75rem;
   line-height: 1.188rem;
   color: #707070;
-  margin-top: 0.625rem; 
+  margin-top: 0.625rem;
+  margin-bottom: 2.5rem; 
 }
 
 .star {
@@ -218,8 +241,8 @@
 }
 
 .CgProfile  {
-  width: 1.667rem;
-  height: 1.667rem;
+  width: 2rem;
+  height: 2rem;;
   color: #714DD9;
   margin-left: 2.5rem;
 }
@@ -227,8 +250,8 @@
 .main_profile_image {
   width: 6.25rem;
   height: 6.25rem;
-  margin-right: 2.5rem;
-  margin-left: 2.5rem;
+  margin-right: 1.5rem;
+  margin-left: 1.5rem;
   margin-bottom: 25rem;
 }
 
@@ -466,29 +489,383 @@
   display: flex;
 }
 
-@media (min-width: 320px) and (max-width: 768px) {
-  .major_container {
-  width: 74.375rem;
-  height: 49rem; 
-  position: absolute;
-  overflow-x: hidden;
-  background-color: #F6FAFB;
+
+
+
+/*********        Phone view          ********/
+@media screen and (max-width: 780px) {
+  .profile_container {
+   display: flex;
+   flex-direction: column;
+   margin: auto;
+}
+
+.back_button_container {
+  display: flex;
+  margin-top: 2.5rem;
+  margin-bottom: 3.125rem;
+  margin-left: 0rem;
 }
 
 .edit_container {
   display: flex;
   justify-content: space-between;
   margin-bottom:  3.125rem;
+  margin-left: 0rem;
+}
+
+.button_container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.625rem;
+}
+
+.button1 {
+  width: 9.375rem; 
+  height: 2.375rem; 
+  background: #714DD9;
+  color: #FFFFFF;
+  border-radius: 0.25rem;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  border: none;
+}
+
+.button2 {
+  width: 9.375rem; 
+  height: 2.375rem; 
+  background: #714DD9;
+  color: #FFFFFF;
+  border-radius: 0.25rem;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  border: none;
+  padding: 0.625rem; 
+  display: flex;
+  justify-content: center;
+}
+
+.button3 {
+  width: 9.375rem; 
+  height: 2.375rem; 
+  background: #714DD9;
+  color: #FFFFFF;
+  border-radius: 0.25rem;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  border: none;
+  padding: 0.625rem;
+  display: flex;
+  justify-content: center;
+}
+
+.button4 {
+  width: 9.375rem; 
+  height: 2.375rem; 
+  background: #714DD9;
+  color: #FFFFFF;
+  border-radius: 0.25rem;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  border: none;
+  padding: 0.625rem;
+  display: flex;
+  justify-content: center;
+}
+
+.profile_container_items_paragraph1 {
+  color: #707070;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 1rem;
+  margin-bottom: 0.625rem; 
+}
+
+.profile_container_items_paragraph2 {
+  color: #707070;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 1rem;
+  margin-bottom: 0.625rem; 
+}
+
+.profile_container_items_paragraph3 {
+  color: #707070;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 1rem;
+  margin-bottom: 0.625rem; 
+}
+
+.profile_container_items_paragraph4 {
+  color: #707070;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 1rem;
+  margin-bottom: 0.625rem; 
+}
+
+.profile_container_items_paragraph5 {
+  color: #707070;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 1rem;
+  margin-bottom: 0.625rem; 
+}
+
+.profile_container_items_paragraph6 {
+  color: #707070;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 1rem;
+  margin-bottom: 0.625rem; 
+}
+
+.profile_container_items_paragraph7 {
+  color: #707070;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 1rem;
+  margin-bottom: 0.625rem; 
+}
+
+.rating_header {
+  color: #707070;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 1rem;
+  margin-bottom: 0.625rem; 
+}
+
+.profile_container_items_id {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 0.75rem;
+  line-height: 1.188rem;
+  color: #707070;
+  margin-top: 0.625rem; 
+}
+
+
+
+.profile_container_details5 {
+  margin-bottom: 2.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.profile_container_details4 {
+  margin-bottom: 2.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.main_profile_image {
+  width: 6.25rem;
+  height: 6.25rem;
+  margin-right: 2.5rem;
+  margin-left: 0rem;
+  margin-bottom: 0.5rem;
+}
+
+.CgProfile  {
+  width: 1.667rem;
+  height: 1.667rem;
+  color: #714DD9;
+  margin-left: 0rem;
+}
+
+.edit_container {
+  display: flex;
+  margin-bottom:  3.125rem;
   background: #F6FAFB;
-  margin-right: 1.5rem;
+  margin-left: 0rem;
 }
 
-.rating_container {
-  margin-bottom: 1.25rem;
-  width: 10rem;
+.edit_button {
+  border: none;
+  color: #714DD9;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  font-family: "Open Sans";
+  font-family: normal;
+  font-weight: 600;
+  background: #F6FAFB;
+  margin-top: 0.7rem;
 }
+
+.profile_container_items_id {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 1rem;
+  line-height: 1.188rem;
+  color: #707070;
+  margin-bottom: 0.625rem; 
+}
+
+.profile_container_items_city {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 1rem; 
+  color: #707070;
+  margin-bottom: 0.625rem;
+}
+
+.back_button_header {
+  color: #707070;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 1rem;  
+  margin-left: 0.313rem; 
+  margin-top: 0.1rem; 
+}
+
+.AiOutlineArrowLeft {
+  color: #576B75;
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.profile_container_details1 {
+  margin-bottom: 2.5rem;
+}
+
+.profile_container_details2 {
+  margin-bottom: 2.5rem;
+}
+
+.profile_container_details3 {
+  margin-bottom: 2.5rem;
+}
+
+.profile_container_details4 {
+  margin-bottom: 2.5rem;
+  display: flex;
+}
+
+.profile_container_details5 {
+  margin-bottom: 2.5rem;
+  display: flex;
+}
+
+.profile_container_num {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1rem;
+  color: #333333;
+  margin-bottom: 1.5rem;
+}
+
+.rating_container_div{
+  margin-left: 0rem;
+}
+
+.profile_container_items {
+  gap: 1.25rem;
+  margin-left: 0rem;
 }
 
 
+}
+
+
+
+
+/**********      Tablet view  *************/
+@media screen and (max-width: 1366px) {
+  .profile_container {
+   display: flex;
+   flex-direction: column;
+   margin: auto;
+}
+
+.back_button_header {
+  color: #707070;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 1rem;  
+  margin-left: 0.313rem; 
+  margin-top: 0.2rem; 
+}
+
+.AiOutlineArrowLeft {
+  color: #576B75;
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.edit_button {
+  border: none;
+  color: #714DD9;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  font-family: "Open Sans";
+  font-family: normal;
+  font-weight: 600;
+  background: #F6FAFB;
+  margin-top: 0.7rem;
+}
+
+.main_profile_image {
+  width: 6.25rem;
+  height: 6.25rem;
+  margin-right: 2.5rem;
+  margin-left: 0rem;
+  margin-bottom: 0.5rem;
+}
+
+.CgProfile  {
+  width: 1.667rem;
+  height: 1.667rem;
+  color: #714DD9;
+  margin-left: 0rem;
+}
+
+.edit_container {
+  display: flex;
+  margin-bottom:  3.125rem;
+  background: #F6FAFB;
+  margin-left: 0rem;
+}
+
+.back_button_container {
+  display: flex;
+  margin-top: 2.5rem;
+  margin-bottom: 3.125rem;
+  margin-left: 0rem;
+}
+
+.rating_container_div{
+  margin-left: 0rem;
+}
+
+.profile_container_items {
+  gap: 1.25rem;
+  margin-left: 0rem;
+}
+
+}
 
 
