--- a/src/components/accountPreferences/Header.module.scss
+++ b/src/components/accountPreferences/Header.module.scss
@@ -1,5 +1,6 @@
 .mainHeader {
-  border-bottom: 1px solid #e9f3f5;
+  margin-top: 5px;
+  border-bottom: 3px solid #e9f3f5;
 }
 
 .header__div {
@@ -51,13 +52,6 @@
     color: #714dd9;
     cursor: pointer;
     text-decoration: none;
-    background-color: #ffffff;
-  }
-
-  .pro {
-    padding: 10px 40px;
-    color: #181818;
-    background-color: #f6fafb;
   }
 }
 
