--- a/src/components/accountPreferences/SideBar.module.scss
+++ b/src/components/accountPreferences/SideBar.module.scss
@@ -1,16 +1,19 @@
 .sidebar {
+  margin-top: 5px;
   min-width: 30%;
   display: flex;
   flex-direction: column;
   gap: 15px;
   color: #333333;
   align-items: center;
-  border-right: 1px solid #e9f3f5;
+  border-right: 3px solid #e9f3f5;
 
   &__ticked {
     display: flex;
     align-items: center;
     gap: 5px;
+    cursor: pointer;
+    color: #333333;
 
     .ticked {
       font-size: 1.2rem;
@@ -21,10 +24,10 @@
     background-color: #714dd9;
     border: 1px solid #714dd9;
     color: #fafafa;
-    font-size: 0.875rem;
+    font-size: 0.675rem;
     display: flex;
     align-items: center;
-    padding: 10px 7px;
+    padding: 7px 10px;
     border-radius: 7px;
     margin: 10px;
     font-weight: 600;
@@ -58,6 +61,7 @@
 
     .todoBtn {
       padding: 10px 20px;
+      font-size: 0.875rem;
     }
   }
 }
